# aadc2017Carleone

./: CMakeLists.txt  README.md  aadc.description
AADC_OpenCVTemplate/: cOpenCVTemplate.cpp  cOpenCVTemplate.h  stdafx.h
AADC_TemplateFilter/: cTemplateFilter.cpp  cTemplateFilter.h  stdafx.h  template_data.h
BasicFunctions/: CMakeLists.txt
BasicFunctions/AADC_ControllerPID/: cControllerPID.cpp  cControllerPID.h
BasicFunctions/BaseControl/: BaseControl.cpp  BaseControl.h  CMakeLists.txt  stdafx.h
BasicFunctions/CrossroadDetector/: CMakeLists.txt  CrossroadDetector.cpp  CrossroadDetector.h
BasicFunctions/DriveDistance/: CMakeLists.txt  driveDistance.cpp  driveDistance.h
BasicFunctions/LaneSteeringBeta/: CMakeLists.txt  LaneSteeringBeta.cpp  LaneSteeringBeta.h
BasicFunctions/LaneSteeringReverse/: CMakeLists.txt  LaneSteeringReverse.cpp  LaneSteeringReverse.h
BasicFunctions/StopLineDetector/: CMakeLists.txt  StopLineDetector.cpp  StopLineDetector.h
BasicFunctions/TheBrain/: CMakeLists.txt  TheBrain.cpp  TheBrain.h
BasicFunctions/ZebraDetector/: CMakeLists.txt  ZebraDetector.cpp  ZebraDetector.h
CarStateGenerator/: CMakeLists.txt  CarStateGenerator.cpp  CarStateGenerator.h  displaywidget.cpp  displaywidget.h  moc_CarStateGenerator.cpp  moc_displaywidget.cpp
Classification/: CMakeLists.txt
EmergencyStop/: CMakeLists.txt  EmergencyStop.cpp  EmergencyStop.h  stdafx.h
Parking/: CMakeLists.txt  Parking.cpp  Parking.h
PictureCapturer/: CMakeLists.txt  cPictureCapturer.cpp  cPictureCapturer.h
Python_ExtIf_Server/: ExtIf.thrift  ExtIf_Server.py  (+7 more)
(+80 files in other folders)
